Fix talks and events on mobile

--- a/assets/sass/_components.scss
+++ b/assets/sass/_components.scss
@@ -118,7 +118,7 @@
 	&::before{
 		position: absolute;
 		left: 0;
-		top: -3px;
+		top: -4px;
 		content: '\25A0';
 		font-size: rem-calc(25);
 	}
