--- a/assets/sass/_type.scss
+++ b/assets/sass/_type.scss
@@ -226,6 +226,10 @@ h3,
 	}
 }
 
+p .call-to-action{
+	font-size: rem-calc(16);
+}
+
 .call-to-action-footer{
 	display: inline-block;
 	text-transform: uppercase;
